server-side signing part one
