# docs/swagger.yaml
@@ -2,26 +2,28 @@ basePath: /api
 definitions:
   model.Message:
     properties:
-      authorBase64:
-        type: string
-      content:
+      answer-to:
+        description: Used if the message is a comment to a publication
         type: string
       createdAt:
-        type: string
-      displayedName:
-        description: Stored and given by user
         type: string
       id:
         description: Stored and generated
         type: string
-      messageID:
-        description: Used if the message is a comment to a publication
+      message:
+        type: string
+      name:
+        description: Stored and given by user
         type: string
       pod:
         description: Not saved in db but tell where it is sent from so remains in
           JSON
         type: string
+      public-key:
+        description: Encoded in URL-safe Base64
+        type: string
       signatureBase64:
+        description: Encoded in URL-safe Base64
         type: string
     type: object
 info:
@@ -81,6 +83,11 @@ paths:
               $ref: '#/definitions/model.Message'
             type: array
       summary: Show all original messages (for the front page)
+    post:
+      description: Post a new message
+      produces:
+      - application/json
+      summary: Post a new message
   /message/{uuid}:
     get:
       description: get string by ID
@@ -98,12 +105,6 @@ paths:
           schema:
             $ref: '#/definitions/model.Message'
       summary: Show a specific message
-  /new:
-    post:
-      description: get string by ID
-      produces:
-      - application/json
-      summary: Post a new message
   /user/{pubkey}:
     get:
       description: get string by ID
